# Customer_insight_agent

./: .gitignore  README.md  app.py  deploy.sh  main.py  pyproject.toml  requirements.txt  router.py  verify_integration.py
data/: enterprise_aliases.xlsx
data/knowledge/: shanghai_mobile_profile.md  shanghai_telecom_profile.md  shanghai_unicom_profile.md  tiandu_robotics_profile.md
scripts/: build_opportunities.py  update_llm_regions.py
services/: customer.py  general_chat.py  industry.py  potential.py  regional.py
static/: index.html  ui_1.html
utils/: alias_helper.py  db_helper.py  file_helper.py  mock_db.py  rag_engine.py
