[project]
name = "customer-insight-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.136.1",
    "openai>=2.37.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "uvicorn>=0.47.0",
    "sqlalchemy>=2.0.30",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
]
